<resources>
    <string name="app_name">2SQTBooking</string>
    <string name="app_name_manager" translatable="false">2SQTManager</string>
    <string name="title_home">Home</string>
    <string name="title_staying">My Staying</string>
    <string name="title_fast_order">Fast Order</string>
    <string name="title_user">Profile</string>
    <string name="title_service" translatable="false">Services</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home page</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_my_staging" translatable="false">My staging</string>
    <string name="menu_user" translatable="false">User</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in"> Sign In</string>
    <string name="sign_up"> Sign Up</string>
    <string name="logout">Log Out</string>
    <string name="date_format" translatable="false">--/--/----</string>
    <string name="address" translatable="false">125 Trần Phú, Văn Quán, Hà Đông, Hà Nội</string>
    <string name="title_activity_pick_date" translatable="false">PickDateActivity</string>
    <string name="our_services">Our Services</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="and_explore">and explore</string>
    <string name="our_services_intro">our services !</string>
    <string name="fast_booking">Fast Booking</string>
    <string name="reservation">Reservation</string>
    <string name="gymnastics">Gymnastics</string>
    <string name="tennis">Tennis</string>
    <string name="golf" translatable="false">Golf</string>
    <string name="our_hotel">Our Hotel</string>
    <string name="our_hotel_description">Welcome to our luxurious hotel complex, offering a range of stunning accommodations to suit every taste. Enjoy breathtaking views of the ocean, city, or gardens from your private balcony or terrace. Our exceptional amenities, including multiple swimming pools, gymnastics center and sport services, ensure a truly indulgent stay. Discover the ultimate in comfort and style at our hotel complex, where every detail is designed to exceed your expectations.</string>
    <string name="the_great_healing_and_relax_place">The great healing and relax place</string>
    <string name="gymnastics_and_fitness_center">Gymnastics and Fitness Center</string>
    <string name="tennis_and_golf">Tennis and Golf</string>
    <string name="proposed_rooms">Review rooms</string>
    <string name="recently_viewed_rooms">Recently viewed rooms</string>
    <string name="welcome">Welcome to 2SQT Hotel Booking</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password_should_be">Password should be</string>
    <string name="at_least_9_characters">At least 9 characters</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="minimum_one_number">Minimum one number</string>
    <string name="minimum_one_symbol">Minimum one symbol</string>
    <string name="you_have_been_an_account">You have been an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_registered_email_below">Enter your registered email below</string>
    <string name="to_receive_password_reset_instruction">to receive password reset instruction</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="remember_password">Remember password?</string>
    <string name="email_has_been_sent">Email has been sent!</string>
    <string name="please_check_your_inbox_and_click">Please check your inbox and click</string>
    <string name="in_the_received_link_to_reset_a_password">in the received link to reset a password</string>
    <string name="didn_t_receive_the_link">Didn\'t receive the link?</string>
    <string name="resent"> Resent</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_phone">Please enter phone</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="confirm_password_is_not_equal_password">Confirm password is not equal password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_manager" translatable="false">ManagerActivity</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="selection_date">Selection Date</string>
</resources>