<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="30dp"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_email_below"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_receive_password_reset_instruction"
            android:textSize="16sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/forgot" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:hint="@string/enter_email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_email"
            android:textColor="@color/red_color"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            app:cardBackgroundColor="@color/colorDefault">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/change_password"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/color_button"
                android:text="@string/sign_in"/>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>