<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="30dp"
    tools:context=".activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_has_been_sent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_check_your_inbox_and_click"
            android:textSize="16sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_the_received_link_to_reset_a_password"
            android:textSize="16sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/img_app"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="70dp"
            android:scaleType="fitXY"
            android:src="@drawable/forgot" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter email"
            android:textColor="@color/red_color"
            android:visibility="gone"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llResentEmail"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/didn_t_receive_the_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="@string/resent"
            android:textColor="@color/color_button" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/color_button"
                android:text="@string/sign_in"/>

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>